// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'create tree for arrays with indexes c…' > renders expected ascii table > create tree for arrays with indexes collapse ascii 1`] = `
"
+-----+----+
| 1.1 |  1 |
+-----+----+
| 1.2 |  2 |
+-----+----+
| 2.1 | 11 |
+-----+----+
| 2.2 | 22 |
+-----+----+"
`;

exports[`'create tree for arrays with indexes c…' > renders expected html table > create tree for arrays with indexes collapse html 1`] = `
"<table><tr><td colspan="1" rowspan="1"><b>1.1</b></td>
<td colspan="1" rowspan="1">1</td></tr>
<tr><td colspan="1" rowspan="1"><b>1.2</b></td>
<td colspan="1" rowspan="1">2</td></tr>
<tr><td colspan="1" rowspan="1"><b>2.1</b></td>
<td colspan="1" rowspan="1">11</td></tr>
<tr><td colspan="1" rowspan="1"><b>2.2</b></td>
<td colspan="1" rowspan="1">22</td></tr></table>"
`;

exports[`'create tree for arrays with indexes c…' > renders expected markdown-like ascii table > create tree for arrays with indexes collapse markdown-like 1`] = `
"
| 1.1 |  1 |
|-----|----|
| 1.2 |  2 |
| 2.1 | 11 |
| 2.2 | 22 |"
`;

exports[`'create tree for arrays' > renders expected ascii table > create tree for arrays ascii 1`] = `
"
+---+--------+
| 1 |      1 |
+---+--------+
| 2 |      2 |
+---+---+----+
|   | 1 | 11 |
| 3 +---+----+
|   | 2 | 22 |
+---+---+----+"
`;

exports[`'create tree for arrays' > renders expected html table > create tree for arrays html 1`] = `
"<table><tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="2" rowspan="1">1</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="2" rowspan="1">2</td></tr>
<tr><td colspan="1" rowspan="2"><b>3</b></td>
<td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">11</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1">22</td></tr></table>"
`;

exports[`'create tree for arrays' > renders expected markdown-like ascii table > create tree for arrays markdown-like 1`] = `
"
| 1 |      1 |
|---|--------|
| 2 |      2 |
| 3 | 1 | 11 |
|   | 2 | 22 |"
`;

exports[`'create tree for objects' > renders expected ascii table > create tree for objects ascii 1`] = `
"
+---+---+---------+
| a | b |    c    |
+---+---+----+----+
|   |   | aa | bb |
| 1 | 2 +----+----+
|   |   | 11 | 22 |
+---+---+----+----+"
`;

exports[`'create tree for objects' > renders expected html table > create tree for objects html 1`] = `
"<table><tr><td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="2" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="2">1</td>
<td colspan="1" rowspan="2">2</td>
<td colspan="1" rowspan="1"><b>aa</b></td>
<td colspan="1" rowspan="1"><b>bb</b></td></tr>
<tr><td colspan="1" rowspan="1">11</td>
<td colspan="1" rowspan="1">22</td></tr></table>"
`;

exports[`'create tree for objects' > renders expected markdown-like ascii table > create tree for objects markdown-like 1`] = `
"
| a | b |    c    |
|---|---|---------|
| 1 | 2 | aa | bb |
|   |   | 11 | 22 |"
`;

exports[`'deduplicate headers with format in bo…' > renders expected ascii table > deduplicate headers with format in both items ascii 1`] = `
"
+---+---------------+---------------+---+--------------------------+
|   |    options    |               |   |         targets          |
|   +---------------+               |   +-----------------+--------+
| # | reduceOptions | pluginVersion | # |                 |        |
|   +---------------+               |   |      expr       | format |
|   |    values     |               |   |                 |        |
+---+---------------+---------------+---+-----------------+--------+
| 1 | false         | 7.3.1         | 1 | loki_build_info | table  |
+---+---------------+---------------+---+-----------------+--------+
| 2 | false         | 7.3.2         | 1 | sum_messages    | json   |
+---+---------------+---------------+---+-----------------+--------+"
`;

exports[`'deduplicate headers with format in bo…' > renders expected html table > deduplicate headers with format in both items html 1`] = `
"<table><tr><td colspan="1" rowspan="3"><b>#</b></td>
<td colspan="1" rowspan="1"><b>options</b></td>
<td colspan="1" rowspan="3"><b>pluginVersion</b></td>
<td colspan="1" rowspan="3"><b>#</b></td>
<td colspan="2" rowspan="1"><b>targets</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>reduceOptions</b></td>
<td colspan="1" rowspan="2"><b>expr</b></td>
<td colspan="1" rowspan="2"><b>format</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>values</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">false</td>
<td colspan="1" rowspan="1">7.3.1</td>
<td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">loki_build_info</td>
<td colspan="1" rowspan="1">table</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1">false</td>
<td colspan="1" rowspan="1">7.3.2</td>
<td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">sum_messages</td>
<td colspan="1" rowspan="1">json</td></tr></table>"
`;

exports[`'deduplicate headers with format in bo…' > renders expected markdown-like ascii table > deduplicate headers with format in both items markdown-like 1`] = `
"
|   |    options    |               |   |         targets          |
| # |---------------| pluginVersion | # |--------------------------|
|   | reduceOptions |               |   |      expr       | format |
|---|    values     |---------------|---|-----------------|--------|
| 1 | false         | 7.3.1         | 1 | loki_build_info | table  |
| 2 | false         | 7.3.2         | 1 | sum_messages    | json   |"
`;

exports[`'deduplicate multiline tree headers' > renders expected ascii table > deduplicate multiline tree headers ascii 1`] = `
"
+---+---+---+
|   | a | b |
| # +---+---+
|   | x | y |
+---+---+---+
| 1 | 1 | 2 |
+---+---+---+
| 2 | 3 | 4 |
+---+---+---+"
`;

exports[`'deduplicate multiline tree headers' > renders expected html table > deduplicate multiline tree headers html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>x</b></td>
<td colspan="1" rowspan="1"><b>y</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1</td>
<td colspan="1" rowspan="1">2</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1">3</td>
<td colspan="1" rowspan="1">4</td></tr></table>"
`;

exports[`'deduplicate multiline tree headers' > renders expected markdown-like ascii table > deduplicate multiline tree headers markdown-like 1`] = `
"
| # | a | b |
|   |---|---|
|---| x | y |
| 1 | 1 | 2 |
| 2 | 3 | 4 |"
`;

exports[`'deduplicate nested arrays of objects' > renders expected ascii table > deduplicate nested arrays of objects ascii 1`] = `
"
+-----+---+-----+-----+-----+
|     | # |  a  |  b  |  c  |
| 1.1 +---+-----+-----+-----+
|     | 1 | 1.1 | 1.2 | 1.3 |
+-----+---+-----+-----+-----+
|     | # |  a  |  b  |  c  |
| 1.2 +---+-----+-----+-----+
|     | 1 | 1.4 | 1.5 | 1.6 |
+-----+---+-----+-----+-----+
|     | # |  a  |  b  |  c  |
| 1.3 +---+-----+-----+-----+
|     | 1 | 1.7 | 1.8 | 1.9 |
+-----+---+-----+-----+-----+
|     | # |  a  |  b  |  c  |
| 2.1 +---+-----+-----+-----+
|     | 1 | 2.1 | 2.2 | 2.3 |
+-----+---+-----+-----+-----+
|     | # |  a  |  b  |  c  |
| 2.2 +---+-----+-----+-----+
|     | 1 | 2.4 | 2.5 | 2.6 |
+-----+---+-----+-----+-----+
|     | # |  a  |  b  |  c  |
| 2.3 +---+-----+-----+-----+
|     | 1 | 2.7 | 2.8 | 2.9 |
+-----+---+-----+-----+-----+"
`;

exports[`'deduplicate nested arrays of objects' > renders expected html table > deduplicate nested arrays of objects html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>1.1</b></td>
<td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1.1</td>
<td colspan="1" rowspan="1">1.2</td>
<td colspan="1" rowspan="1">1.3</td></tr>
<tr><td colspan="1" rowspan="2"><b>1.2</b></td>
<td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1.4</td>
<td colspan="1" rowspan="1">1.5</td>
<td colspan="1" rowspan="1">1.6</td></tr>
<tr><td colspan="1" rowspan="2"><b>1.3</b></td>
<td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1.7</td>
<td colspan="1" rowspan="1">1.8</td>
<td colspan="1" rowspan="1">1.9</td></tr>
<tr><td colspan="1" rowspan="2"><b>2.1</b></td>
<td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">2.1</td>
<td colspan="1" rowspan="1">2.2</td>
<td colspan="1" rowspan="1">2.3</td></tr>
<tr><td colspan="1" rowspan="2"><b>2.2</b></td>
<td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">2.4</td>
<td colspan="1" rowspan="1">2.5</td>
<td colspan="1" rowspan="1">2.6</td></tr>
<tr><td colspan="1" rowspan="2"><b>2.3</b></td>
<td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">2.7</td>
<td colspan="1" rowspan="1">2.8</td>
<td colspan="1" rowspan="1">2.9</td></tr></table>"
`;

exports[`'deduplicate nested arrays of objects' > renders expected markdown-like ascii table > deduplicate nested arrays of objects markdown-like 1`] = `
"
| 1.1 | # |  a  |  b  |  c  |
|     |---|-----|-----|-----|
|-----| 1 | 1.1 | 1.2 | 1.3 |
| 1.2 | # |  a  |  b  |  c  |
|-----| 1 | 1.4 | 1.5 | 1.6 |
| 1.3 | # |  a  |  b  |  c  |
|-----| 1 | 1.7 | 1.8 | 1.9 |
| 2.1 | # |  a  |  b  |  c  |
|-----| 1 | 2.1 | 2.2 | 2.3 |
| 2.2 | # |  a  |  b  |  c  |
|-----| 1 | 2.4 | 2.5 | 2.6 |
| 2.3 | # |  a  |  b  |  c  |
|     | 1 | 2.7 | 2.8 | 2.9 |"
`;

exports[`'deduplicate tree headers' > renders expected ascii table > deduplicate tree headers ascii 1`] = `
"
+---+---+---+---+
| # | a | b | c |
+---+---+---+---+
| 1 | 1 | 2 | 3 |
+---+---+---+---+
| 2 | 4 | 5 | 6 |
+---+---+---+---+
| 3 | 7 | 8 | 9 |
+---+---+---+---+"
`;

exports[`'deduplicate tree headers' > renders expected html table > deduplicate tree headers html 1`] = `
"<table><tr><td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1</td>
<td colspan="1" rowspan="1">2</td>
<td colspan="1" rowspan="1">3</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1">4</td>
<td colspan="1" rowspan="1">5</td>
<td colspan="1" rowspan="1">6</td></tr>
<tr><td colspan="1" rowspan="1"><b>3</b></td>
<td colspan="1" rowspan="1">7</td>
<td colspan="1" rowspan="1">8</td>
<td colspan="1" rowspan="1">9</td></tr></table>"
`;

exports[`'deduplicate tree headers' > renders expected markdown-like ascii table > deduplicate tree headers markdown-like 1`] = `
"
| # | a | b | c |
|---|---|---|---|
| 1 | 1 | 2 | 3 |
| 2 | 4 | 5 | 6 |
| 3 | 7 | 8 | 9 |"
`;

exports[`'deduplicate tree indexes' > renders expected ascii table > deduplicate tree indexes ascii 1`] = `
"
+---+---+---+---+
| # | a | b | c |
+---+---+---+---+
| 1 | 1 | 2 | 3 |
+---+---+---+---+
| 2 | 4 | 5 | 6 |
+---+---+---+---+
| 3 | 7 | 8 | 9 |
+---+---+---+---+"
`;

exports[`'deduplicate tree indexes' > renders expected html table > deduplicate tree indexes html 1`] = `
"<table><tr><td colspan="1" rowspan="1"><b>#</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1</td>
<td colspan="1" rowspan="1">2</td>
<td colspan="1" rowspan="1">3</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1">4</td>
<td colspan="1" rowspan="1">5</td>
<td colspan="1" rowspan="1">6</td></tr>
<tr><td colspan="1" rowspan="1"><b>3</b></td>
<td colspan="1" rowspan="1">7</td>
<td colspan="1" rowspan="1">8</td>
<td colspan="1" rowspan="1">9</td></tr></table>"
`;

exports[`'deduplicate tree indexes' > renders expected markdown-like ascii table > deduplicate tree indexes markdown-like 1`] = `
"
| # | a | b | c |
|---|---|---|---|
| 1 | 1 | 2 | 3 |
| 2 | 4 | 5 | 6 |
| 3 | 7 | 8 | 9 |"
`;

exports[`'fully deduplicate common headers' > renders expected ascii table > fully deduplicate common headers ascii 1`] = `
"
+---+---+---+
|   |   | b |
| # | a +---+
|   |   | c |
+---+---+---+
| 1 | 1 | 1 |
+---+---+---+
| 2 | 2 | 2 |
+---+---+---+"
`;

exports[`'fully deduplicate common headers' > renders expected html table > fully deduplicate common headers html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>#</b></td>
<td colspan="1" rowspan="2"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">1</td>
<td colspan="1" rowspan="1">1</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1">2</td>
<td colspan="1" rowspan="1">2</td></tr></table>"
`;

exports[`'fully deduplicate common headers' > renders expected markdown-like ascii table > fully deduplicate common headers markdown-like 1`] = `
"
| # | a | b |
|   |   |---|
|---|---| c |
| 1 | 1 | 1 |
| 2 | 2 | 2 |"
`;

exports[`'handle empty arrays' > renders expected ascii table > handle empty arrays ascii 1`] = `
"
+---+------------------------------------------------------------------------------+
|   |                                    tasks                                     |
| # +---------------------------+---+----------------------------------------------+
|   |             n             | d |                      a                       |
+---+---+-----------------------+---+----------------------+-----------------------+
| 1 | 1 | UspYpi-8NwmZZR7FJprSb |   |          1           | aCx8zMrOjqW6K55TMokHD |
+---+---+-----------------------+---+----------------------+-----------------------+
| 2 |   |                       | 1 | gwT5xfbxgkPCq_VDyoBO3                        |
+---+---+-----------------------+---+----------------------------------------------+"
`;

exports[`'handle empty arrays' > renders expected html table > handle empty arrays html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>#</b></td>
<td colspan="5" rowspan="1"><b>tasks</b></td></tr>
<tr><td colspan="2" rowspan="1"><b>n</b></td>
<td colspan="1" rowspan="1"><b>d</b></td>
<td colspan="2" rowspan="1"><b>a</b></td></tr>
<tr><td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">UspYpi-8NwmZZR7FJprSb</td>
<td colspan="1" rowspan="1"></td>
<td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="1" rowspan="1">aCx8zMrOjqW6K55TMokHD</td></tr>
<tr><td colspan="1" rowspan="1"><b>2</b></td>
<td colspan="1" rowspan="1"></td>
<td colspan="1" rowspan="1"></td>
<td colspan="1" rowspan="1"><b>1</b></td>
<td colspan="2" rowspan="1">gwT5xfbxgkPCq_VDyoBO3</td></tr></table>"
`;

exports[`'handle empty arrays' > renders expected markdown-like ascii table > handle empty arrays markdown-like 1`] = `
"
| # |                                    tasks                                     |
|   |------------------------------------------------------------------------------|
|---|             n             | d |                      a                       |
| 1 | 1 | UspYpi-8NwmZZR7FJprSb |   |          1           | aCx8zMrOjqW6K55TMokHD |
| 2 |   |                       | 1 | gwT5xfbxgkPCq_VDyoBO3                        |"
`;

exports[`'partially deduplicate objects with di…' > renders expected ascii table > partially deduplicate objects with different headers ascii 1`] = `
"
+---+---------------------+-----------------------+
|   |    character_id     |        item_id        |
| 1 +---------------------+-----------------------+
|   | 5428010618020694593 |                    95 |
+---+---------------------+---------+-------------+
|   |    character_id     | item_id | stack_count |
| 2 +---------------------+---------+-------------+
|   | 5428010618020694593 |     101 |           4 |
+---+---------------------+---------+-------------+"
`;

exports[`'partially deduplicate objects with di…' > renders expected html table > partially deduplicate objects with different headers html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>1</b></td>
<td colspan="1" rowspan="1"><b>character_id</b></td>
<td colspan="2" rowspan="1"><b>item_id</b></td></tr>
<tr><td colspan="1" rowspan="1">5428010618020694593</td>
<td colspan="2" rowspan="1">95</td></tr>
<tr><td colspan="1" rowspan="2"><b>2</b></td>
<td colspan="1" rowspan="1"><b>character_id</b></td>
<td colspan="1" rowspan="1"><b>item_id</b></td>
<td colspan="1" rowspan="1"><b>stack_count</b></td></tr>
<tr><td colspan="1" rowspan="1">5428010618020694593</td>
<td colspan="1" rowspan="1">101</td>
<td colspan="1" rowspan="1">4</td></tr></table>"
`;

exports[`'partially deduplicate objects with di…' > renders expected markdown-like ascii table > partially deduplicate objects with different headers markdown-like 1`] = `
"
| 1 |    character_id     |        item_id        |
|   |---------------------|-----------------------|
|---| 5428010618020694593 |                    95 |
| 2 |    character_id     | item_id | stack_count |
|   | 5428010618020694593 |     101 |           4 |"
`;

exports[`'skip header deduplication' > renders expected ascii table > skip header deduplication ascii 1`] = `
"
+---+---+---+---+
|   | a | b | c |
| 1 +---+---+---+
|   | 1 | 2 | 3 |
+---+---+---+---+
|   | a | b | c |
| 2 +---+---+---+
|   | 4 | 5 | 6 |
+---+---+---+---+"
`;

exports[`'skip header deduplication' > renders expected html table > skip header deduplication html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>1</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1">1</td>
<td colspan="1" rowspan="1">2</td>
<td colspan="1" rowspan="1">3</td></tr>
<tr><td colspan="1" rowspan="2"><b>2</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1">4</td>
<td colspan="1" rowspan="1">5</td>
<td colspan="1" rowspan="1">6</td></tr></table>"
`;

exports[`'skip header deduplication' > renders expected markdown-like ascii table > skip header deduplication markdown-like 1`] = `
"
| 1 | a | b | c |
|   |---|---|---|
|---| 1 | 2 | 3 |
| 2 | a | b | c |
|   | 4 | 5 | 6 |"
`;

exports[`'stabilize order of properties in arra…' > renders expected ascii table > stabilize order of properties in arrays of objects ascii 1`] = `
"
+---+---+---+
|   | b | a |
| 1 +---+---+
|   | 2 | 1 |
+---+---+---+
|   | a | c |
| 2 +---+---+
|   | 4 | 3 |
+---+---+---+"
`;

exports[`'stabilize order of properties in arra…' > renders expected html table > stabilize order of properties in arrays of objects html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>1</b></td>
<td colspan="1" rowspan="1"><b>b</b></td>
<td colspan="1" rowspan="1"><b>a</b></td></tr>
<tr><td colspan="1" rowspan="1">2</td>
<td colspan="1" rowspan="1">1</td></tr>
<tr><td colspan="1" rowspan="2"><b>2</b></td>
<td colspan="1" rowspan="1"><b>a</b></td>
<td colspan="1" rowspan="1"><b>c</b></td></tr>
<tr><td colspan="1" rowspan="1">4</td>
<td colspan="1" rowspan="1">3</td></tr></table>"
`;

exports[`'stabilize order of properties in arra…' > renders expected markdown-like ascii table > stabilize order of properties in arrays of objects markdown-like 1`] = `
"
| 1 | b | a |
|   |---|---|
|---| 2 | 1 |
| 2 | a | c |
|   | 4 | 3 |"
`;

exports[`'work with unique headers' > renders expected ascii table > work with unique headers ascii 1`] = `
"
+---+-----------------------------+------+------+----------+--------+-------------+
|   |         description         |  in  | name | required |  type  | uniqueItems |
| 1 +-----------------------------+------+------+----------+--------+-------------+
|   | name of the ComponentStatus | path | name | true     | string | true        |
+---+-----------------------------+------+------+----------+--------+-------------+
|   |                                    $ref                                     |
| 2 +-----------------------------------------------------------------------------+
|   | #/parameters/pretty-tJGM1-ng                                                |
+---+-----------------------------------------------------------------------------+"
`;

exports[`'work with unique headers' > renders expected html table > work with unique headers html 1`] = `
"<table><tr><td colspan="1" rowspan="2"><b>1</b></td>
<td colspan="1" rowspan="1"><b>description</b></td>
<td colspan="1" rowspan="1"><b>in</b></td>
<td colspan="1" rowspan="1"><b>name</b></td>
<td colspan="1" rowspan="1"><b>required</b></td>
<td colspan="1" rowspan="1"><b>type</b></td>
<td colspan="1" rowspan="1"><b>uniqueItems</b></td></tr>
<tr><td colspan="1" rowspan="1">name of the ComponentStatus</td>
<td colspan="1" rowspan="1">path</td>
<td colspan="1" rowspan="1">name</td>
<td colspan="1" rowspan="1">true</td>
<td colspan="1" rowspan="1">string</td>
<td colspan="1" rowspan="1">true</td></tr>
<tr><td colspan="1" rowspan="2"><b>2</b></td>
<td colspan="6" rowspan="1"><b>$ref</b></td></tr>
<tr><td colspan="6" rowspan="1">#/parameters/pretty-tJGM1-ng</td></tr></table>"
`;

exports[`'work with unique headers' > renders expected markdown-like ascii table > work with unique headers markdown-like 1`] = `
"
| 1 |         description         |  in  | name | required |  type  | uniqueItems |
|   |-----------------------------|------|------|----------|--------|-------------|
|---| name of the ComponentStatus | path | name | true     | string | true        |
| 2 |                                    $ref                                     |
|   | #/parameters/pretty-tJGM1-ng                                                |"
`;
